@@ -30,6 +30,7 @@ $ -> Language fix or change
 02-Oct-2009 Ian MacLennan
 + Added cache tests from 1.5 unit tests
 + Added environment tests from 1.5 unit tests
++ Added filesystem tests from 1.5 unit tests
 
 25-Sep-2009 Andrew Eddie
 + Added test for JComponentForm constructor.
